# FRAAND

./: .dockerignore  .flake8  .gitignore  .pdm.toml  .pre-commit-config.yaml  .space.kts  CONTRIBUTORS.txt  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose-dev.yaml  docker-compose.dev.yml  docker-compose.yaml  docker-compose.yml  mypy.ini  pyproject.toml  setup.cfg
.github/workflows/: codeql-analysis.yml
alembic/: env.py  script.py.mako
alembic/versions/: 2023-05-05__empty_init.py  2023-05-06__added_user_model.py  2023-05-06__empty_init.py  2023-05-16__added_items_and_images_frame_models.py  2023-05-16__added_tag_itemtag_models.py  2023-05-21__added_collection_like_relationship_.py  2023-05-21__added_user_to_item_relationship.py
docs/: devnotes.md  envars.md  roadmap.md
docs/architecture/: db.md  flow.md
envs/: .dev_db_env  .dev_django_env
envs/dev/: db.env
fraand/core/: asgi.py  models.py  settings.py  typing.py  urls.py  wsgi.py
fraand/social_network/: admin.py  forms.py  models.py  views.py
fraand/social_network/migrations/: 0001_initial.py  0002_delete_tag_alter_deal_due_date.py  0002_remove_item_tags.py  0003_alter_deal_due_date.py  0003_alter_deal_due_date_alter_deal_status.py  0003_item_tags.py  0004_alter_deal_due_date.py  0004_alter_item_tags_alter_tag_name.py  0004_item_rent_alter_deal_due_date.py  0005_alter_deal_due_date.py  0005_alter_item_tags.py  0006_alter_deal_due_date.py  0006_remove_image_name.py  0007_alter_deal_due_date.py  0007_alter_image_item.py
fraand/static/css/: app.css  main.css
fraand/static/js/: app.js
fraand/templates/: base.html  formset.html  homepage.html  index.html  template_of_templates.html
fraand/templates/cirrus/: base.html  footer.html  header.html  index.html  search_results.html  test.html
fraand/templates/cirrus/items/: edit.html
fraand/templates/cirrus/profile/: deals.html  from_deal_card.html  items.html  profile_base.html  profile_tabs.html  security.html  settings.html  to_deal_card.html
fraand/templates/cirrus/search/: item_card.html  pagination.html  results.html
fraand/templates/registration/: logged_out.html  login.html  password_change.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
fraand/templates/widgets/: base_footer.html  base_navbar.html  give_away.html  header_cirrus.html  item.html  item_add.html  item_confirm_delete.html  item_detail.html  item_edit.html  items_results.html  main_search_cirrus.html  pagination_cirrus.html  rent_add.html  rent_confirm_delete.html  rent_detail.html  search_results.html  subheader_cirrus.html  welcome_wagon.html  wip.html
fraand/templates/widgets/profile/: profile.html
html-prototypes/prototype-main/: index.html  styles.css
requirements/: dev.txt  production.txt
scripts/: entrypoint.sh  start.sh  test.sh
src/fraand_core/: __init__.py  config.py  constants.py  db.py  deps.py  main.py
src/fraand_core/crud/: __init__.py  annotations.py  base.py  exceptions.py
src/fraand_core/domains/: __init__.py
src/fraand_core/domains/deals/: __init__.py  dependencies.py  models.py  schemas.py
src/fraand_core/domains/deals/routers/: __init__.py  crud.py  rent.py
src/fraand_core/domains/items/: __init__.py  constants.py  dependencies.py  exceptions.py  models.py  router.py  utils.py
src/fraand_core/domains/items/routers/: __init__.py  crud.py  pages.py
src/fraand_core/domains/items/schemas/: __init__.py  items.py  tags.py
src/fraand_core/domains/search/: __init__.py  router.py
src/fraand_core/domains/users/: __init__.py  dependencies.py  manager.py  models.py  routers.py  routes.py  schemas.py
src/fraand_core/models/: __init__.py  base.py  utils.py
src/fraand_core/routers/: __init__.py  deals_router.py  items_router.py  search_router.py  security_router.py  users_router.py
src/fraand_core/schemas/: __init__.py  base_orsjson.py  user.py
src/fraand_core/security/: __init__.py  deps.py  proxy_router.py  security.py
src/fraand_core/static/css/: main.css
src/fraand_core/templates/: __init__.py  base.html  index.html  login.html
src/fraand_core/templates/widgets/: header.html
src/fraand_core/templates/widgets/auth/: login.html  logout.html
src/fraand_core/templates/widgets/items/: 404_item.html  add.html  confirm_delete.html  detail.html  edit.html  items_list.html
src/fraand_core/templates/widgets/items/card/: item_card.html  item_tag.html  item_tags.html
src/fraand_core/templates/widgets/items/crud/: add.html  confirm_delete.html  detail.html  edit.html
src/fraand_core/templates/widgets/search/: bar.html  item_card.html  pagination.html  results.html
src/fraand_core/utils/: __init__.py
tests/: conftest.py  ping_test.py
