[project]
name = ""
version = ""
description = ""
authors = [
    {name = "UnoYakshi", email = "uno.yakshi@gmail.com"},
]
dependencies = [
    "alembic>=1.10.4",
    "asyncpg[sa]>=0.27.0",
    "fastapi[orjson,ujson]>=0.95.1",
    "pydantic[dotenv]>=1.10.7",
    "uvicorn>=0.22.0",
    "sqlmodel>=0.0.8",
    "mako>=1.2.4",
    "ujson>=5.7.0",
    "orjson>=3.8.11",
]
requires-python = ">=3.11"
license = {text = "GNU"}


[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "pre-commit>=3.2.2",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.2.0",
    "flake8>=6.0.0",
    "autoflake>=2.1.1",
    "sqlalchemy-stubs>=0.4",
    "flake8-bugbear>=23.3.23",
    "pep8-naming>=0.13.3",
]


[[tool.pdm.autoexport]]
filename = "requirements/production.txt"
without-hashes = true
groups = ["default"]

[[tool.pdm.autoexport]]
filename = "requirements/dev.txt"
without-hashes = true
groups = ["dev"]

[tool.pdm.scripts]
_.env_file = ".env/import_dev.env"

[tool.black]
line-length = 120
target-version = ['py311']
single-quotes = true
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |Dockerfile
  |Jenkinfile
)/
'''

[tool.isort]
profile = 'black'
line_length = 120
multi_line_output = 3
skip_glob = 'alembic/versions/*.py'

[tool.mypy]
python_version = 3.11
disallow_untyped_defs = true
exclude = ['pgdata/', 'scripts/', 'alembic/', 'tests/']
