[project]
name = ""
version = ""
description = ""
authors = [
    { name = "UnoYakshi", email = "uno.yakshi@gmail.com" },
]
dependencies = [
    "alembic>=1.10.4",
    "asyncpg[sa]>=0.27.0",
    "fastapi[orjson,ujson]>=0.95.1",
    "pydantic[dotenv]>=1.10.7",
    "uvicorn[standart]>=0.22.0",
    "ujson>=5.7.0",
    "orjson>=3.8.11",
    "sqlalchemy[asyncio,mypy]==1.4.41",
    "sqlmodel>=0.0.8",
    "jinja2>=3.1.2",
    "fastapi-users>=11.0.0",
]
requires-python = ">=3.11"
license = { text = "GNU" }


[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "pre-commit>=3.2.2",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.2.0",
    "flake8>=6.0.0",
    "autoflake>=2.1.1",
    "sqlalchemy-stubs>=0.4",
    "flake8-bugbear>=23.3.23",
    "pep8-naming>=0.13.3",
    "ruff>=0.0.263",
]


[[tool.pdm.autoexport]]
filename = "requirements/production.txt"
without-hashes = true
groups = ["default"]

[[tool.pdm.autoexport]]
filename = "requirements/dev.txt"
without-hashes = true
groups = ["default", "dev"]

[tool.pdm.scripts]
_.env_file = ".env/import_dev.env"

[tool.black]
line-length = 120
target-version = ['py311']
single-quotes = true
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |Dockerfile
  |Jenkinfile
)/
'''

[tool.isort]
profile = 'black'
line_length = 120
multi_line_output = 3
skip_glob = 'alembic/versions/*.py'

[tool.mypy]
python_version = 3.11
disallow_untyped_defs = true
exclude = ['pgdata/', 'scripts/', 'alembic/', 'tests/']


[tool.ruff]
# https://beta.ruff.rs/docs/rules
select = ["A", "B", "D", "E", "F", "N", "I", "S", "W", "ARG", "ANN", "COM", "C4", "ERA", "INP", "ISC", "RET", "RUF", "PIE", "PLE", "PLR", "PT", "PTH", "SIM", "SLF", "T20", "TRY"]
ignore = ["D401", "TRY400"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

line-length = 120

target-version = "py311"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
